# labeler

./: .dockerignore  .env.sample  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  docker-entrypoint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: CAPABILITIES.md  DEPLOY.md  PLAN-phase-1.md  PLAN-phase-2.md  SPEC.md  VISION.md
docs/adr/: 0001-record-architecture-decisions.md  0002-two-stage-template-parsing.md  0003-typst-rendering-engine.md  0004-bottom-left-coordinate-system.md  0005-recursive-containers-with-option-gating.md  0006-template-edit-ownership.md  0007-printer-architecture-and-transport-model.md  0008-ui-delivery.md  0009-image-source-model.md  0010-variable-interpolation-layer.md  0011-unified-batch-endpoint.md  0012-job-options.md  0013-render-print-ux.md  0014-csv-import-grid.md  0015-settings-printers-ux.md  0016-deployment-and-packaging.md  0017-app-authentication.md  0018-api-integration-spine.md  0019-ci-and-image-publishing.md  0019-ci-packaging-design.md  0020-variables-vs-settings.md  0021-homebox-connect-hardening.md  0022-import-option-model.md  0023-template-thumbnail-endpoint.md  0024-app-settings-storage-and-api.md  0025-optional-no-auth-mode.md  0026-auto-length-dynamic-width.md  0027-multi-arch-image-publishing.md  0028-datetime-interpolation-token.md  0029-runtime-base-debian-slim.md  0030-multiline-auto-length-tape.md  0031-inbound-print-webhook.md  0032-ipp-auth-custom-ca.md  0033-capability-aware-rendering.md  0034-single-config-dir.md  0035-font-weight-via-variable-font.md  0035-per-field-render-override.md  0036-container-rotation.md  0037-effortless-print-form.md  0038-print-first-landing.md  (+3 more)
docs/superpowers/plans/: 2026-06-15-m4-integrations.md  2026-06-16-app-auth.md  2026-06-16-homebox-backend.md  2026-06-16-m5-backend-foundation.md  2026-06-16-m5-csv-import-grid.md  2026-06-16-m5-frontend-foundation.md  2026-06-16-m5-render-print.md  2026-06-16-m5-settings-printers.md  2026-06-16-m5-templates-screens.md  2026-06-16-m6-packaging.md  2026-06-16-unified-batch-endpoint.md  2026-06-17-ci-packaging.md  2026-06-17-homebox-frontend.md
docs/superpowers/specs/: 2026-06-15-image-layout-item-design.md  2026-06-15-m1-rendering-completeness-design.md  2026-06-15-m2-template-management-design.md  2026-06-15-m3-state-and-printing-design.md  2026-06-15-m4-integrations-design.md  2026-06-15-m5-web-ui-design.md  2026-06-16-api-integration-framework-design.md  2026-06-16-app-auth-design.md  2026-06-16-homebox-integration-design.md  2026-06-16-m6-packaging-design.md  2026-06-17-ci-packaging-design.md  (+2 more)
schemas/: template.schema.json
scripts/: render_avery_horizontal.sh  render_test.sh
src/: api.rs  auth.rs  batch.rs  bundled.rs  convert.rs  datetime_fmt.rs  driver.rs  egress.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  openapi.rs  parse.rs  raw.rs  render.rs  settings.rs  store.rs  templates.rs  ui_freshness.rs
src/connector/: cursor.rs  homebox.rs  mod.rs
src/render/: helpers.rs  mod.rs
templates/: avery5163.yaml  brother12mm.yaml  brother18mm.yaml  brother24mm.yaml  brother_12mm.yaml  brother_18mm.yaml  brother_18mm_qr.yaml  brother_24mm.yaml  brother_24mm_multiline.yaml  brother_24mm_qr.yaml  homebox-qr.yaml
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: main.tsx  setupTests.ts  theme.css
(+74 files in other folders)
