[package]
name = "labeler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
typst = "0.14"
typst-as-lib = { version = "0.15", features = ["typst-kit-embed-fonts", "typst-kit-fonts"] }
typst-render = "0.14"
typst-pdf = "0.14"
qrcode = "0.14"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
