[package]
name = "labeler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
serde_path_to_error = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.7", features = ["trace", "fs"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
typst = "0.14"
typst-as-lib = { version = "0.15", features = ["typst-kit-embed-fonts", "typst-kit-fonts"] }
typst-render = "0.14"
typst-pdf = "0.14"
qrcode = "0.14"
fontdue = "0.9"
base64 = "0.22"
arc-swap = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2"
ipp = "6"
async-trait = "0.1"
csv = "1.4.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
