[package]
name = "labeler"
version = "0.1.0"
edition = "2021"
description = "Self-hosted REST service that renders labels from declarative YAML templates."
license = "MIT"
repository = "https://github.com/pfa230/labeler"
publish = false

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
serde_path_to_error = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.7", features = ["trace", "fs"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
typst = "0.14"
typst-as-lib = { version = "0.15", features = ["typst-kit-embed-fonts", "typst-kit-fonts"] }
typst-render = "0.14"
typst-pdf = "0.14"
qrcode = "0.14"
fontdue = "0.9"
base64 = "0.22"
arc-swap = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2"
ipp = "6"
async-trait = "0.1"
csv = "1.4.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
axum-extra = { version = "0.10", features = ["cookie"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
url = "2"
hmac = "0.12"
include_dir = "0.7"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
wiremock = "0.6"
image = { version = "=0.25.10", default-features = false }
